--- a/HomeRentApp-MAUI/AppShell.xaml
+++ b/HomeRentApp-MAUI/AppShell.xaml
@@ -4,12 +4,18 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:HomeRentApp_MAUI.Views"
+    Shell.TabBarBackgroundColor="{StaticResource Fondo}"
     Shell.FlyoutBehavior="Disabled"
     Title="HomeRentApp_MAUI">
 
     <TabBar>
-        <ShellContent Title="Inicio" ContentTemplate="{DataTemplate local:DepartamentosPage}" />
-        <ShellContent Title="Nuevo" ContentTemplate="{DataTemplate local:NuevoDepartamentoPage}" />
+        <ShellContent Title="Departamentos"
+                      ContentTemplate="{DataTemplate local:DepartamentosPage}"
+                      Icon="home.png" />
+
+        <ShellContent Title="Agregar"
+                      ContentTemplate="{DataTemplate local:NuevoDepartamentoPage}"
+                      Icon="add.png" />
     </TabBar>
 
 </Shell>
