--- a/HomeRentApp-MAUI/Resources/Styles/Styles.xaml
+++ b/HomeRentApp-MAUI/Resources/Styles/Styles.xaml
@@ -4,6 +4,24 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml">
 
+    
+    
+    <Style TargetType="Entry" x:Key="StyledEntry">
+        <Setter Property="BackgroundColor" Value="{StaticResource CardBackground}" />
+        <Setter Property="TextColor" Value="{StaticResource DarkText}" />
+        <Setter Property="PlaceholderColor" Value="Gray" />
+        <Setter Property="Margin" Value="0,5" />
+    </Style>
+
+    <Style TargetType="Button" x:Key="PrimaryButton">
+        <Setter Property="TextColor" Value="White" />
+        <Setter Property="BackgroundColor" Value="{StaticResource AccentOrange}" />
+        <Setter Property="CornerRadius" Value="10" />
+        <Setter Property="FontAttributes" Value="Bold" />
+    </Style>
+    
+    
+
     <Style TargetType="ActivityIndicator">
         <Setter Property="Color" Value="{AppThemeBinding Light={StaticResource Primary}, Dark={StaticResource White}}" />
     </Style>
