--- a/HomeRentApp-MAUI/Views/EditarDepartamentoPage.xaml
+++ b/HomeRentApp-MAUI/Views/EditarDepartamentoPage.xaml
@@ -3,14 +3,23 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="HomeRentApp_MAUI.Views.EditarDepartamentoPage"
              Title="EditarDepartamentoPage">
+    <Shell.TitleView>
+        <Grid BackgroundColor="{StaticResource Fondo}">
+            <Label Text="Departamentos"  
+               VerticalOptions="Center"  
+               HorizontalOptions="Center"  
+               FontAttributes="Bold"  
+               TextColor="Black" />
+        </Grid>
+    </Shell.TitleView>
     <StackLayout Padding="20" Spacing="10">
         <Image x:Name="imagenPreview" HeightRequest="150"/>
-        <Button Text="Seleccionar Imagen" Clicked="OnSeleccionarImagen"/>
+        <Button Text="Seleccionar Imagen" Clicked="OnSeleccionarImagen" BackgroundColor="{StaticResource Fondo}" TextColor="Black"/>
         <Entry Placeholder="Nombre" x:Name="nombreEntry"/>
         <Entry Placeholder="Dirección" x:Name="direccionEntry"/>
         <Entry Placeholder="Precio" Keyboard="Numeric" x:Name="precioEntry"/>
         <Entry Placeholder="Cuartos disponibles" x:Name="cuartosEntry"/>
-        <Button Text="Guardar Cambios" Clicked="OnGuardarClicked"/>
+        <Button Text="Guardar Cambios" Clicked="OnGuardarClicked" BackgroundColor="{StaticResource Fondo}" TextColor="Black"/>
     </StackLayout>
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="←" Priority="0" Order="Primary" Clicked="OnBackClicked"/>
